gitops/k8s-manifests/server3/k8s-monitoring/HTTPRoute.otel.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: otel
  namespace: monitoring
  labels:
    app.kubernetes.io/name: k8s-monitoring
    app.kubernetes.io/component: observability
  annotations:
    external-dns.alpha.kubernetes.io/target: "192.168.1.202"
    argocd.argoproj.io/sync-wave: "100"
spec:
  parentRefs:
    - name: traefik-gateway
      namespace: traefik
  hostnames:
    - otel.server3.homelab.irha.cz
  rules:
    - backendRefs:
        - name: k8s-monitoring-alloy-receiver
          namespace: monitoring
          port: 4318
